testsuite/tests/grammar/invalid_lkt/no_main_rule.lkt
import lexer_example

grammar foo_grammar {
    rule1 <- Example("example")
}
